--- a/home/common/dms/settings.json
+++ b/home/common/dms/settings.json
@@ -172,7 +172,7 @@
   "niriOverviewOverlayEnabled": true,
   "useAutoLocation": true,
   "weatherEnabled": true,
-  "networkPreference": "auto",
+  "networkPreference": "ethernet",
   "vpnLastConnected": "",
   "iconTheme": "System Default",
   "cursorSettings": {
@@ -405,7 +405,7 @@
       "spacing": 4,
       "innerPadding": 4,
       "bottomGap": 0,
-      "transparency": 1,
+      "transparency": 0.25,
       "widgetTransparency": 1,
       "squareCorners": false,
       "noBackground": false,
@@ -420,14 +420,16 @@
       "widgetOutlineColor": "primary",
       "widgetOutlineOpacity": 1,
       "widgetOutlineThickness": 1,
-      "fontScale": 1,
+      "fontScale": 1.3,
       "autoHide": false,
       "autoHideDelay": 250,
       "openOnOverview": false,
       "visible": true,
       "popupGapsAuto": true,
       "popupGapsManual": 4,
-      "maximizeDetection": true
+      "maximizeDetection": true,
+      "shadowOpacity": 80,
+      "shadowColorMode": "text"
     },
     {
       "id": "bar1768828119379",
@@ -474,7 +476,7 @@
       "spacing": 4,
       "innerPadding": 4,
       "bottomGap": 0,
-      "transparency": 1,
+      "transparency": 0.25,
       "widgetTransparency": 1,
       "squareCorners": false,
       "noBackground": false,
@@ -489,7 +491,7 @@
       "widgetOutlineColor": "primary",
       "widgetOutlineOpacity": 1,
       "widgetOutlineThickness": 1,
-      "fontScale": 1,
+      "fontScale": 1.5,
       "autoHide": false,
       "autoHideDelay": 250,
       "openOnOverview": false,
